Bug 223919 - akonadi-ports regression: sub-todos make KOrganizer crash
Summary: akonadi-ports regression: sub-todos make KOrganizer crash
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-23 15:25 UTC by Sergio Martins
Modified: 2010-01-29 15:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Martins 2010-01-23 15:25:39 UTC
Version:            (using Devel)
Installed from:    Compiled sources

KOrganizer doesn't start if there's a to-do with a sub-todo.

ASSERT: "parentInc" in file /home/kde-devel/kde/src/kdepim/akonadi/kcal/calendar.cpp, line 249


#7  0xb6bd7855 in Akonadi::Calendar::Private::updateItem (this=0x82419c0, item=@0x819d610, mode=Akonadi::Calendar::Private::AssertNew) at /home/kde-devel/kde/src/kdepim/akonadi/kcal/calendar.cpp:249
#8  0xb6bd7c43 in Akonadi::Calendar::Private::itemsAdded (this=0x82419c0, items=@0xbfb08b18) at /home/kde-devel/kde/src/kdepim/akonadi/kcal/calendar.cpp:289
#9  0xb6bd80dc in Akonadi::Calendar::Private::rowsInserted (this=0x82419c0, start=0, end=1) at /home/kde-devel/kde/src/kdepim/akonadi/kcal/calendar.cpp:85
#10 0xb6bccc2f in Akonadi::Calendar::Private::qt_metacall (this=0x82419c0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbfb08c64) at /home/kde-devel/kde/build/kdepim/akonadi/kcal/moc_calendar_p.cpp:136
#11 0xb5285abb in QMetaObject::metacall (object=0x82419c0, cl=QMetaObject::InvokeMetaMethod, idx=6, argv=0xbfb08c64) at kernel/qmetaobject.cpp:237
#12 0xb529a45e in QMetaObject::activate (sender=0x82414a0, m=0xb53cb178, local_signal_index=5, argv=0xbfb08c64) at kernel/qobject.cpp:3294
#13 0xb53005d0 in QAbstractItemModel::rowsInserted (this=0x82414a0, _t1=@0xbfb08ca0, _t2=0, _t3=1) at .moc/debug-shared/moc_qabstractitemmodel.cpp:181
#14 0xb5271dc6 in QAbstractItemModel::endInsertRows (this=0x82414a0) at kernel/qabstractitemmodel.cpp:2410
#15 0xb6283e06 in QSortFilterProxyModelPrivate::insert_source_items (this=0x82415c0, source_to_proxy=@0x8241de0, proxy_to_source=@0x8241dd8, source_items=@0xbfb08da0, source_parent=@0xbfb08fd0,
    orient=Qt::Vertical, emit_signal=true) at itemviews/qsortfilterproxymodel.cpp:656
#16 0xb6284346 in QSortFilterProxyModelPrivate::source_items_inserted (this=0x82415c0, source_parent=@0xbfb08fd0, start=0, end=1, orient=Qt::Vertical) at itemviews/qsortfilterproxymodel.cpp:740
#17 0xb628451c in QSortFilterProxyModelPrivate::_q_sourceRowsInserted (this=0x82415c0, source_parent=@0xbfb08fd0, start=0, end=1) at itemviews/qsortfilterproxymodel.cpp:1211
#18 0xb6286072 in QSortFilterProxyModel::qt_metacall (this=0x82414a0, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0xbfb08f94) at .moc/debug-shared/moc_qsortfilterproxymodel.cpp:135
#19 0xb7114e02 in Akonadi::EntityMimeTypeFilterModel::qt_metacall (this=0x82414a0, _c=QMetaObject::InvokeMetaMethod, _id=37, _a=0xbfb08f94)
    at /home/kde-devel/kde/build/kdepimlibs/akonadi/entitymimetypefiltermodel.moc:64
#20 0xb5285abb in QMetaObject::metacall (object=0x82414a0, cl=QMetaObject::InvokeMetaMethod, idx=37, argv=0xbfb08f94) at kernel/qmetaobject.cpp:237
#21 0xb529a45e in QMetaObject::activate (sender=0x82413e8, m=0xb53cb178, local_signal_index=5, argv=0xbfb08f94) at kernel/qobject.cpp:3294
#22 0xb53005d0 in QAbstractItemModel::rowsInserted (this=0x82413e8, _t1=@0xbfb08fd0, _t2=0, _t3=1) at .moc/debug-shared/moc_qabstractitemmodel.cpp:181
#23 0xb5271dc6 in QAbstractItemModel::endInsertRows (this=0x82413e8) at kernel/qabstractitemmodel.cpp:2410
#24 0xb762c8ff in KSelectionProxyModelPrivate::sourceRowsInserted (this=0x8240658, parent=@0xbfb091b0, start=0, end=1) at /home/kde-devel/kde/src/kdelibs/kdeui/itemviews/kselectionproxymodel.cpp:450
#25 0xb763006c in KSelectionProxyModel::qt_metacall (this=0x82413e8, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfb09174) at /home/kde-devel/kde/build/kdelibs/kdeui/moc_kselectionproxymodel.cpp:118
#26 0xb5285abb in QMetaObject::metacall (object=0x82413e8, cl=QMetaObject::InvokeMetaMethod, idx=28, argv=0xbfb09174) at kernel/qmetaobject.cpp:237
#27 0xb529a45e in QMetaObject::activate (sender=0x81d4d70, m=0xb53cb178, local_signal_index=5, argv=0xbfb09174) at kernel/qobject.cpp:3294
#28 0xb53005d0 in QAbstractItemModel::rowsInserted (this=0x81d4d70, _t1=@0xbfb091b0, _t2=0, _t3=1) at .moc/debug-shared/moc_qabstractitemmodel.cpp:181
Comment 1 Sergio Martins 2010-01-29 15:33:00 UTC
SVN commit 1082005 by smartins:

Fix crash. The iterator is already defined outside this inner block.

Do not backport.

BUG: 223919


 M  +1 -1      calendar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1082005