Fix crash. The iterator is already defined outside this inner block.

Do not backport.

BUG: 223919

svn path=/trunk/KDE/kdepim/akonadi/kcal/; revision=1082005